# axes

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  aegra.json  codecov.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-images.yml  ci.yml  deploy.yml  destroy.yml  e2e.yml  release.yml
app_integrations/github/: __init__.py  __main__.py  constants.py  docs_url.py  extra_app_data.py  identity_linking.py  installation_token.py  models.py  oauth_state.py  oauth_user.py  router.py  schemas.py  scraper.py  service.py  settings.py
app_integrations/github/doc_generation/: __init__.py  zip_embedder.py
app_integrations/salesforce/: __init__.py  __main__.py  client.py  constants.py  install_state.py  router.py  service.py  settings.py
app_integrations/salesforce/doc_generation/: __init__.py  pdf_embedder.py
app_integrations/salesforce/scripts/: create_integration_user.apex
app_integrations/slack/: __init__.py  constants.py  installation_store.py  oauth_flow.py  service.py  state_store.py
billing_service/: pyproject.toml
billing_service/src/billing/: __init__.py  charge_usage.py  config.py  paddle_client.py  routes.py  schemas.py  service.py  webhooks.py
billing_service/tests/integration/: test_routes.py
billing_service/tests/unit/: test_charge_usage_cli.py  test_imports.py  test_service.py  test_webhook_handlers.py  test_webhooks.py
deployments/docker/: Dockerfile  Dockerfile.neo4j-mcp
docs/: deployment.md  developer-guide.md
examples/react_agent/: __init__.py  context.py  grant_execution_tools.py  graph.py  prompts.py  state.py  tenant_agent_context_prompt.py  user_context_models.py  user_context_prompt.py  user_context_service.py  utils.py
examples/react_agent/edges/: end.py
examples/react_agent/nodes/: doc_corpus_context.py  github_context.py  github_openapi_tools.py  intent_parser.py  llm_call.py  tools.py  user_context.py  validator.py
examples/react_agent/subgraphs/: access_grant_execution.py  access_request_evaluation.py  field_detection.py  permission_detection.py  required_permission.py
examples/salesforce_permissions/: __init__.py  context.py  graph.py  prompts.py  state.py  utils.py
graph_service/: docker-compose.yml  pyproject.toml
graph_service/certs/salesforce/: AxesRev.crt
graph_service/src/: common_nodes.py
graph_service/src/db/: client.py  queries.py
graph_service/src/integrations/: app_names.py  fetcher.py  graph_runner.py  identity_correlation.py  tenant_plans.py  tenant_runner.py
graph_service/src/integrations/github/: fetcher.py  models.py  nodes.py  permissions.py  run.py  settings.py
graph_service/src/integrations/github/ingestion/: __init__.py  installation.py  org.py  permissions.py  repos.py  shared.py  teams.py  tenant.py  users.py
graph_service/src/integrations/salesforce/: __init__.py  client.py  fetcher.py  ids.py  models.py  run.py  seed_example_ownership.py  settings.py  share_objects.py  soql.py
graph_service/src/integrations/salesforce/ingestion/: __init__.py  assignments.py  fetch_org.py  groups.py  org_connection.py  ownership.py  permissions.py  profiles.py  record_access.py  resources.py  roles.py  shared.py  tenant.py  users.py
graph_service/src/mcp_server/: __init__.py  neo4j_mcp_remote.py
graph_service/src/neo4j_mcp/: __init__.py  __main__.py  schema_snapshot.py  schemas.py  settings.py
graph_service/src/neo4j_mcp/db/: queries.py
graph_service/src/neo4j_mcp/server/: app.py  lifespan.py
graph_service/src/neo4j_mcp/tools/: cypher.py
graph_service/src/nodes/: __init__.py  app_connection.py  app_identity.py  base.py  group.py  identity.py  profile.py  relationships.py  resource.py  tenant.py
graph_service/tests/unit/: test_app_identity_manager.py  test_cypher_tool.py  test_github_permissions.py  test_github_teams.py  test_has_permission_rel.py  test_identity_correlation.py  test_imports.py  test_node_identity_fields.py  test_profile_relationships.py  test_salesforce_models.py  test_salesforce_ownership.py  test_salesforce_permissions.py  test_salesforce_record_access.py  test_salesforce_roles.py  test_schema_snapshot.py  test_settings.py  test_tenant_plans.py
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/eks/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/graph-stack/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/neo4j/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/neo4j-data/: main.tf  outputs.tf  variables.tf
infra/modules/neo4j-mcp/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/postgres-db/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/rds/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/vpc/: main.tf  outputs.tf  variables.tf  versions.tf
infra/products/: account.hcl  root.hcl
infra/products/dev/: env.hcl
langraph_server/: Dockerfile  README.md  aegra.json  alembic.ini  pyproject.toml
langraph_server/alembic/: env.py
langraph_server/alembic/versions/: 20250817172544_initial_schema.py  20250830161758_add_context.py  20250831174511_add_cascade_delete_for_runs_thread_fkey.py  20250913193817_add_version_table.py  20250913213535_add_metadata_for_assistant_table_and_.py  20251115152415_migrate_run_status_to_langgraph_.py  (+9 more)
langraph_server/tests/: README.md  conftest.py
libs/aegra-api/: README.md  pyproject.toml
libs/neo4j-mcp/: pyproject.toml
neo4j_mcp/: Dockerfile  pyproject.toml
neo4j_mcp/src/neo4j_mcp/: __init__.py  __main__.py  server.py
scripts/: inspect_latest_run.py
slack_app/: .env.example  __init__.py  app.py  auth.py  auth0.py  billing_routes.py  billing_service.py  bolt.py  charge_usage.py  client.py  config.py  deploy_manifest.py  handlers.py  integration_service.py  paddle_client.py  replies.py  routes.py  slack_manifest.json  tenant_routes.py  tenant_schemas.py  tenant_service.py
tenant/: __init__.py  agent_context_service.py  integration_service.py  models.py  routes.py  schemas.py  service.py
webapp/axes/: .env.example  package-lock.json  package.json  proxy.ts
(+289 files in other folders)
