# Root pyproject.toml - Workspace configuration + dev tools
# The actual packages are in libs/aegra-api

[project]
name = "aegra-workspace"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "langchain-mcp-adapters>=0.2.1",
    "httpx>=0.27.0",
    "pygithub>=2.9.1",
    "tiktoken>=0.12.0",
    "langchain-community>=0.4.1",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "graph_service", "billing_service"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # Within an except clause, raise exceptions with `raise ... from err`
    "ARG001", # Unused function argument
    "ARG002", # Unused method argument
    "ARG005", # Unused lambda argument
    "SIM108", # Use ternary operator (less readable in many cases)
]

[tool.ruff.lint.isort]
known-first-party = ["aegra_api", "billing", "app_integrations", "slack_app", "tenant"]

# Note: pytest config is in each package's pyproject.toml
# Run tests from: libs/aegra-api

# ty replaces mypy for type checking. It uses its own rule system rather than
# mypy-style strictness flags. Severity and per-rule overrides go in
# [tool.ty.rules]; see https://docs.astral.sh/ty/reference/rules/ for details.
[tool.ty.environment]
python-version = "3.12"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = [
    "B101",  # assert statements
    "B104",  # binding to all interfaces (0.0.0.0 default is intentional for server configs)
    "B404",  # import subprocess (needed for CLI)
    "B603",  # subprocess without shell=True (needed for CLI)
    "B607",  # partial executable path (needed for CLI to run docker, systemctl, etc.)
]
