[project]
name = "aegra-billing-service"
version = "0.1.0"
description = "Paddle tenant billing: card-on-file subscriptions and monthly usage charges"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "fastapi>=0.110.1",
    "httpx>=0.27.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.0",
    "structlog>=25.0.0",
]

[project.scripts]
charge-usage = "billing.charge_usage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/billing"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = [
    "E501",
    "B008",
    "B904",
    "ARG001",
    "ARG002",
    "ARG005",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["billing", "tenant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", ".."]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
]
