[project]
name = "aegra-neo4j-mcp"
version = "0.1.0"
description = "Remote MCP server exposing Neo4j graph database tools"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "mcp>=1.0.0",
    "neo4j>=5.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=25.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.35.0",
    "neomodel>=6.1.0",
    "pygithub>=2.9.1",
    "asyncpg>=0.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neo4j_mcp", "src/db", "src/nodes", "src/integrations"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = [
    "E501",
    "B008",
    "B904",
    "ARG001",
    "ARG002",
    "ARG005",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["neo4j_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
]
