[project]
name = "aegra-graph-service"
version = "0.1.1"
description = "Neo4j graph domain models and GitHub/Salesforce → graph ingestion"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "neo4j>=5.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=25.0.0",
    "neomodel>=6.1.0",
    "pygithub>=2.9.1",
    "simple-salesforce>=1.12.6",
    "asyncpg>=0.31.0",
    "mcp-neo4j-cypher>=0.6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
neo4j-mcp-remote = "mcp_server.neo4j_mcp_remote:main"
fetch-graph = "integrations.fetcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nodes", "src/integrations", "src/mcp_server"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = [
    "E501",
    "B008",
    "B904",
    "ARG001",
    "ARG002",
    "ARG005",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["nodes", "integrations", "mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
]
