[project]
name = "aegra-graph-service"
version = "0.1.1"
description = "Neo4j graph domain models and GitHub/Salesforce → graph ingestion"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "neo4j>=5.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=25.0.0",
    "neomodel>=6.1.0",
    "pygithub>=2.9.1",
    "simple-salesforce>=1.12.6",
    "asyncpg>=0.31.0",
]

[project.scripts]
fetch-graph = "integrations.fetcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nodes", "src/integrations"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = [
    "E501",
    "B008",
    "B904",
    "ARG001",
    "ARG002",
    "ARG005",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["nodes", "integrations"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.0",
]
