[project]
name = "aegra-neo4j-mcp"
version = "0.1.0"
description = "HTTP Neo4j MCP server (mcp-neo4j-cypher) for LangChain remote MCP clients"
requires-python = ">=3.12"
license = "Apache-2.0"

dependencies = [
    "mcp-neo4j-cypher>=0.6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
neo4j-mcp-remote = "neo4j_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neo4j_mcp"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = [
    "E501",
    "B008",
    "B904",
    "ARG001",
    "ARG002",
    "ARG005",
    "SIM108",
]

[tool.ruff.lint.isort]
known-first-party = ["neo4j_mcp"]
